# unifill

./: .envrc  .gitignore  .luarc.json  LICENSE  README.txt  benchmark.lua  benchmark_results.txt  grep_benchmark.lua  run_benchmark.sh  unifill.lua
.cursor/rules/: project.md
.github/workflows/: lua-unitest.yml  python-unitest.yml
data/: test_invalid.lua  unicode.complete.txt  unicode.every-day.csv  unicode.every-day.lua  unicode.every-day.txt  unicode_data.txt
data/unifill-datafetch/: unicode_data.txt
dev/: IDEAS.txt
dev/guides/: datasets.txt  grep-backend.md  telescope-theming.md  testing.md
dev/rules/: project.md
glyph-catcher/: LICENSE  README.txt  pyproject.toml  run_stats.sh  unittest-python
glyph-catcher/src/glyph_catcher/: __main__.py  config.py  config.yaml  exporter.py  fetcher.py  processor.py  types.py
glyph-catcher/tests/: README.md  __init__.py  test_compression.py  test_exporter.py  test_fetcher.py  test_main.py  test_processor.py
lua/unifill/: constants.lua  data.lua  format.lua  init.lua  log.lua  search.lua  telescope.lua  theme.lua
lua/unifill/backends/: csv_backend.lua  fast_grep_backend.lua  grep_backend.lua  interface.lua  lua_backend.lua
spec/: .luarc.json  minimal_init.lua  run-tests  test.txt  test_infrastructure_spec.lua  test_init.lua  unifill_backends_spec.lua  unifill_core_spec.lua  unifill_fast_grep_backend_spec.lua  unifill_grep_backend_spec.lua  unifill_log_spec.lua  unifill_lua_backend_spec.lua  unifill_results_limit_spec.lua  unifill_spec.lua  unifill_telescope_spec.lua  unifill_xdg_paths_spec.lua
spec-backup/: unifill_results_limit_spec.lua  unifill_xdg_paths_spec.lua
tests/: README.md  basic_test.sh  run_tests.sh  test_unifill.lua
tests2.0/: README.md  async_operations_spec.lua  buffer_operations_spec.lua  command_mode_spec.lua  keypress_simulation_spec.lua  plugin_setup_spec.lua  run-tests  telescope_actions_spec.lua  telescope_picker_spec.lua  test_init.lua
unifill-datafetch/: README.txt  pyproject.toml  run-tests.sh  unicode_characters_table.csv
unifill-datafetch/src/: setup_dataset.py
unifill-datafetch/src/glyph_catcher/: __init__.py  __main__.py  config.py  exporter.py  fetcher.py  processor.py  types.py
unifill-datafetch/src/unifill_datafetch/: __init__.py  __main__.py  config.py  core.py  exporter.py  fetcher.py  processor.py  types.py
unifill-datafetch/tests/: README.md  __init__.py  test_basic.py  test_exporter.py  test_fetcher.py  test_main.py  test_master_data.py  test_processor.py
